@@ -1,3 +1,8 @@
+Fri May  7 21:50:21 2004  Dave Thomas  <dave@pragprog.com>
+
+	* lib/rdoc/parsers/parse_rb.rb (RDoc::parse_include): Allow
+	  multiple arguments to 'include'
+
 Fri May  7 21:03:51 2004  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/fileutils.rb (fu_list): Array() breaks pathes including "\n".
